Fix text overflow for mobile and edit button

--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -9,9 +9,15 @@
   overflow: hidden;
 }
 
+@media screen and (max-width: 1000px) {
+  .profile__about {
+    max-width: 350px;
+  }
+}
+
 @media screen and (max-width: 750px) {
   .profile__about {
-    font-size: 16px;
+    max-width: 250px;
   }
 }
 
@@ -20,5 +26,13 @@
     font-size: 14px;
     text-align: center;
     padding-bottom: 33px;
+    max-width: 300px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .profile__about {
+    max-width: 200px;
+    margin: auto;
   }
 }
