--- a/blocks/profile/__edit-icon/profile__edit-icon.css
+++ b/blocks/profile/__edit-icon/profile__edit-icon.css
@@ -6,7 +6,7 @@
   padding: 6px;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 750px) {
   .profile__edit-icon {
     width: 8px;
     height: 8px;
